Don't run creating_a_methylation_rse_from_methylation_array_files.Rmd

--- a/vignettes/creating_a_methylation_rse_from_methylation_array_files.Rmd
+++ b/vignettes/creating_a_methylation_rse_from_methylation_array_files.Rmd
@@ -14,7 +14,8 @@ knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
   fig.width = 12,
-  fig.height = 6.75
+  fig.height = 6.75,
+  eval=FALSE
 )
 ```
 
