--- a/vignettes/calculating_methylation_transcription_correlations.Rmd
+++ b/vignettes/calculating_methylation_transcription_correlations.Rmd
@@ -84,6 +84,9 @@ names(transcript_annotation_chr11) <- transcript_annotation_chr11$ID
 # Get the TSS for each transcript set ID as names
 transcript_tss_chr11 <- resize(transcript_annotation_chr11, 1, fix = "start")
 rm(transcript_annotation)
+
+# Get the region surrounding each TSS
+tss_proximal_regions_chr11 = methodical::expand_granges(transcript_tss_chr11, upstream = 5000, downstream = 5000)
 ```
 
 ## Preparation of count data
@@ -149,9 +152,8 @@ system.time({transcript_cpg_meth_cors_mcrpc_samples_5kb <- calculateMethSiteTran
   meth_rse = mcrpc_wgbs_hg38_chr11, 
   transcript_expression_table = mcrpc_transcript_counts_normalized, 
   samples_subset = common_mcprc_samples, 
-  tss_gr = transcript_tss_chr11,
-  cor_method = "pearson", max_sites_per_chunk = NULL,
-  expand_upstream = 5000, expand_downstream = 5000, BPPARAM = BPPARAM)})
+  tss_gr = transcript_tss_chr11, tss_associated_gr = tss_proximal_regions_chr11,
+  cor_method = "pearson", max_sites_per_chunk = NULL, BPPARAM = BPPARAM)})
 ```
 
 As an example, we'll examine the CpG methylation transcription correlations for 
